# SoftRenderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.VSCodeCounter/2023-03-05_16-05-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Editor/resources/: editor.rc
Editor/src/: Editor.cpp
Renderer/src/: FileDialogs.cpp  FileDialogs.hpp  Renderer.cpp  Renderer.h
Renderer/src/Buffer/: Buffer.hpp
Renderer/src/Camera/: Camera.cpp  Camera.hpp
Renderer/src/Config/: Config.hpp
Renderer/src/Geometry/: Geometry.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Scene.hpp
Renderer/src/Rasterization/: Rasterizer.cpp  Rasterizer.h
Renderer/src/Rasterization/RenderPass/: RenderPass.hpp
Renderer/src/Rasterization/Shader/: Shader.hpp
Renderer/src/RayTracing/: HitPayload.hpp  RTCTracer.cpp  RTCTracer.hpp  Ray.hpp  RayTracer.cpp  RayTracer.h  RayTracer.hpp
Renderer/src/RayTracing/Material/: Material.hpp  Toon.hpp
Renderer/src/RayTracing/Shape/: Hittable.hpp  Quad.hpp  Triangle.hpp
Renderer/src/Sampler/: Sampler2D.hpp
Renderer/src/Texture/: Texture2D.hpp
Walnut/src/Walnut/: Application.cpp  Application.h  EntryPoint.h  Image.cpp  Image.h  Logger.cpp  Logger.hpp  Random.cpp  Random.h
Walnut/src/Walnut/ImGui/: ImGuiBuild.cpp
